2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b288
	Fix: typo admin_form view_photo.php

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b287
	Fix: CSS class.

2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b286
	Update: CSS cleanup, minor changes.

2004-11-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b285

	Fix: Used adminfrom (introduced in 1.4.3-cvs-b12) also for printservice dropdopwn.
	     This prevents unreadability in some skins.

2004-11-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b284

	Change: Call by reference for blacklisted test.

2004-11-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b283

	* Fix: admin-page is now html 4.01

	* New: Added general footer. Optional you can set $validation_file. 
	       That file will be used for validator.

	* New: Added blacklist test for new comments. if blacklisted, then the comment is not added.
	  Moved some functions from tools/despam into util.php

2004-11-27  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b282

	* Fix: Wrong test in confirm.inc enabled all features (zip, rewrite, mirror) any time.

2004-11-27  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b281

	* Change: Added admin-page.php to save space on first space.

2004-11-24  Andrew Lindeman <alindeman@users.sf.net>    1.5-cvs-b280

	* Fix: Don't quote literal variables

2004-11-23  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b279

	* Fix: Added stats/-wizard to safeToInclude List

	* Fix: Radiogroup in stats-wizard

	* Change: Layout Tweak of stats/-wizard, especially when embedded.

	* Change: tweaked function for validation to use referer when no file was given.

	* Fix: Added correct header and footer to stats-wizard and made is valid html 4.01
	  ToDo: make stats valid HTML	

	Thanks to Kai Tomalik.

2004-11-22  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b278

	* New: Added stats.php by Jeremy Gilliat.
	  - Added stats-wizard.
	  - Modified stats.php to fit with Gallery 1.5
	  - Added new Tab in Step 2 of config for caching settings.