@@ -1,3 +1,6 @@
+2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b289
+	Fix: restored css for the tabs in add_photos.php
+
 2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b288
 	Fix: typo admin_form view_photo.php
 
